dynamix/force-app/main/default/objects/communicat_o__User_Presence_Status__c/communicat_o__User_Presence_Status__c.object-meta.xml
<CustomObject>
    <label>User Presence Status</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>User Presence Status</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Presence Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>