dynamix/force-app/main/default/objects/communicat_o__User_Presence_Status__c/fields/communicat_o__Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Last_Login_Date__c</fullName>
    <label>Last Login Date</label>
    <type>DateTime</type>
</CustomField>