dynamix/force-app/main/default/objects/communicat_o__User_Presence_Status__c/fields/communicat_o__Mode__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>