dynamix/force-app/main/default/objects/communicat_o__User_Presence_Status__c/fields/communicat_o__Status__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>