dynamix/force-app/main/default/objects/communicat_o__User_Presence_Status__c/fields/communicat_o__User__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Persons</relationshipName>
    <type>Lookup</type>
</CustomField>