dynamix/force-app/main/default/objects/communicat_o__User_Presence_Status__c/listViews/S_M_Head_User_Presence_Status.listView-meta.xml
<ListView>
    <fullName>S_M_Head_User_Presence_Status</fullName>
    <filterScope>Queue</filterScope>
    <label>S&amp;M Head</label>
    <queue>S_M_Head</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>